RESOLVED FIXED199879
Prewarm local storage in the NetworkProcess to reduce WebContent process hangs
https://bugs.webkit.org/show_bug.cgi?id=199879
Summary Prewarm local storage in the NetworkProcess to reduce WebContent process hangs
Chris Dumez
Reported 2019-07-17 13:20:34 PDT
Prewarm local storage in the NetworkProcess to reduce WebContent process hangs on Messages::StorageManager::GetValues sync IPC.
Attachments
Patch (17.54 KB, patch)
2019-07-17 13:32 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-07-17 13:20:48 PDT
Chris Dumez
Comment 2 2019-07-17 13:32:36 PDT
WebKit Commit Bot
Comment 3 2019-07-17 19:52:22 PDT
Comment on attachment 374324 [details] Patch Clearing flags on attachment: 374324 Committed r247555: <https://trac.webkit.org/changeset/247555>
WebKit Commit Bot
Comment 4 2019-07-17 19:52:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.