Source/WebCore/storage/Storage.h
@@ -46,6 +46,7 @@ public:
     ExceptionOr<void> removeItem(const String& key);
     ExceptionOr<void> clear();
     bool contains(const String& key) const;
+    bool prewarm();
 
     // Bindings support functions.
     bool isSupportedPropertyName(const String&) const;
