Source/WebCore/storage/StorageArea.h
@@ -58,6 +58,7 @@ public:
     virtual void incrementAccessCount() { }
     virtual void decrementAccessCount() { }
     virtual void closeDatabaseIfIdle() { }
+    virtual bool prewarm() { return false; }
 
     virtual const SecurityOriginData& securityOrigin() const = 0;
 };
